crates/dsrs-macros/tests/ui/format_invalid.stderr
error: #[format] is removed. Use #[render(style = "...")] instead.
 --> tests/ui/format_invalid.rs:6:5
  |
6 |     #[format("xml")]
  |     ^^^^^^^^^^^^^^^^
